--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
-spring.datasource.url = jdbc:mysql://localhost:3306/test
+spring.datasource.url = jdbc:mysql://localhost:3306/authdb?createDatabaseIfNotExist=true
 spring.datasource.username = root
-spring.datasource.password = zheng02
+spring.datasource.password =
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
